--- a/IBM_WatsonAssistant.ipynb
+++ b/IBM_WatsonAssistant.ipynb
@@ -133,8 +133,8 @@
     "from watson_developer_cloud import AssistantV1\n",
     "\n",
     "assistant = AssistantV1(\n",
-    "    username='apikey',\n",
-    "    password='_Sv7Pye9nHbiYelCpOao2wQ6PpC_WuEK1IbPB2aMXZTA',\n",
+    "    username='***',\n",
+    "    password='****',\n",
     "    url='https://gateway-lon.watsonplatform.net/assistant/api',\n",
     "    version='2018-12-26')"
    ]
